--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="蜗牛音效软件,音效软件,音效器,笑声软件,配音软件,特效软件,主播直播助手,音效助手,蜗牛软件">
         <meta name="description" content="蜗牛音效软件是一款直播或录播时使用的音效软件。如主播直播时,说了一个段子,随后你可能就听到了一阵哈哈大笑的背景音乐,这很可能就是音效软件在起作用了,蜗牛音效软件就是这么一款软件,帮助直播人士更好地管理音效营造点爆直播间气氛。">
         <meta name="description" itemprop="description" content="支持自定义快捷键、自定义音效、自带云端音效库、剪辑音效、一键闪避。">
-        <title>进学者-蜗牛音效软件</title>
+        <title>蜗牛音效软件 官网</title>
         <link rel="stylesheet" href="./css/public.css">
         <link rel="stylesheet" href="./css/index.css">
         <script>
